--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libosmocore (0.8.2-3) unstable; urgency=medium
+
+  * minor serialization changes
+
+ -- Kirill Zakharenko <earwin@gmail.com>  Fri, 6 Nov 2015 16:34:58 +0200
+
 libosmocore (0.8.2-2) unstable; urgency=medium
 
   * gsm0480: RELEASE COMPLETE can be without any payload
